--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,41 @@
-aiodns==2.0.0
 aiosmtpd==1.4.2
-appdirs==1.4.4
-asgiref==3.3.1
-astroid==2.5.2
+asgiref==3.3.4
 atpublic==2.1.3
 attrs==20.3.0
-autopep8==1.5.6
-black==20.8b1
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
-click==7.1.2
-cryptography==3.4.6
+cryptography==3.4.7
 defusedxml==0.7.1
-Django==3.1.5
+Django==3.2
 django-allauth==0.44.0
 django-ckeditor==6.0.0
 django-email-verification==0.1.0
 django-js-asset==1.2.2
-django-mobile-app-distribution==0.5
 django-six==1.0.4
 django-utils-six==2.0
 Django-Verify-Email==0.0.5
-future==0.18.2
+docopt==0.6.2
 idna==2.10
-isort==5.8.0
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-mypy-extensions==0.4.3
+Js2Py==0.71
 oauthlib==3.1.0
-pathspec==0.8.1
-pep8==1.7.1
-Pillow==8.1.2
-psycopg2==2.8.6
-pycares==3.1.1
-pycodestyle==2.7.0
+packaging==20.9
+Pillow==8.2.0
+pipwin==0.5.1
 pycparser==2.20
+pyjsparser==2.7.1
 PyJWT==2.0.1
-pylint==2.7.4
+pyparsing==2.4.7
+PyPrind==2.11.2
+pySmartDL==1.3.4
 python3-openid==3.2.0
-pytz==2020.5
-regex==2021.4.4
+pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+six==1.15.0
+soupsieve==2.2.1
 sqlparse==0.4.1
-toml==0.10.2
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
+tzlocal==2.1
 urllib3==1.26.4
-verify-email==2.4.3
-wrapt==1.12.1
+wind==0.0.0.dev0
